Trying to solve not smooth transitions on iOS

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 
 * {
     transition: color 1s, background-color 1s;
-    will-change: background-color, color;
 }
 
 body {
@@ -31,6 +30,7 @@ h1 {
 
 #all {
     width: 100%;
+    will-change: background-color;
 }
 
 #content {
@@ -50,6 +50,7 @@ h1 {
     bottom: 0.7rem;
     display: flex;
     width: 10rem;
+    z-index: 10;
 }
 
 #theme {
@@ -156,6 +157,7 @@ h1 {
 
 .heading {
     padding-bottom: 2rem;
+    will-change: background-color, color;
 }
 
 .main-title {
